--- a/starter/word_embeddings_starter.ipynb
+++ b/starter/word_embeddings_starter.ipynb
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "68559f3a",
    "metadata": {},
    "outputs": [
@@ -187,7 +187,7 @@
     "\n",
     "print(\"Number of documents:\", len(documents))\n",
     "print(\"\\nExample document snippet:\\n\")\n",
-    "print(documents[0][:600])"
+    "print(documents[0][:600])\n"
    ]
   },
   {
